[gd_scene load_steps=43 format=3 uid="uid://cltl4miymivys"]

[ext_resource type="PackedScene" uid="uid://bqpd5cm5dcy71" path="res://Assets/Characters/XBot.glb" id="1_mdl7e"]
[ext_resource type="Script" uid="uid://btgkhykbev6d6" path="res://Scripts/Player.gd" id="1_script"]
[ext_resource type="Script" uid="uid://bkp6agvjjm47t" path="res://Scripts/Weapon/WeaponMgr.gd" id="2_52ee3"]
[ext_resource type="Script" uid="uid://cgibjq8orsoge" path="res://Scripts/Input/InputMgr.gd" id="2_m0x7a"]
[ext_resource type="Script" uid="uid://ruoxwj2thpuw" path="res://Scripts/MovementMgr.gd" id="2_megsn"]
[ext_resource type="Animation" uid="uid://cmym1cbyn4tg5" path="res://Assets/Animations/Library/Unarmed/Idle.res" id="2_qu4a1"]
[ext_resource type="Animation" uid="uid://biyh1eubhiecd" path="res://Assets/Animations/Library/Unarmed/Jump.res" id="3_70d11"]
[ext_resource type="Script" uid="uid://hxg50be1t0o6" path="res://Scripts/Animation.gd" id="3_bhhdu"]
[ext_resource type="Animation" uid="uid://dygqhwo1805bn" path="res://Assets/Animations/Library/SwordAndShield/Idle.res" id="3_nn08x"]
[ext_resource type="Animation" uid="uid://e3vujykiovi8" path="res://Assets/Animations/Library/Unarmed/Walking.res" id="4_cw2d6"]
[ext_resource type="Animation" uid="uid://ywb7kg2bg88c" path="res://Assets/Animations/Library/SwordAndShield/Walk.res" id="8_ksbbd"]
[ext_resource type="Animation" uid="uid://bm2d4g8pfoe07" path="res://Assets/Animations/Library/SwordAndShield/DrawSword.res" id="9_miouo"]
[ext_resource type="Animation" uid="uid://dbxxuoc00n3h3" path="res://Assets/Animations/Library/SwordAndShield/SheathSword.1.res" id="10_1e7my"]
[ext_resource type="Animation" uid="uid://25qcudnomvvf" path="res://Assets/Animations/Library/SwordAndShield/SheathSword.2.res" id="11_arntx"]
[ext_resource type="Animation" uid="uid://o4xndrx00au6" path="res://Assets/Animations/Library/Unarmed/DrawSword.res" id="13_o3h8g"]
[ext_resource type="Script" uid="uid://qat0bt2h635k" path="res://Scripts/Weapon/WeaponSwitchMgr.gd" id="14_switch"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mdl7e"]
radius = 0.4
height = 1.6

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qu4a1"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ixxa"]
_data = {
&"DrawSword": ExtResource("9_miouo"),
&"Idle": ExtResource("3_nn08x"),
&"SheathSword.1": ExtResource("10_1e7my"),
&"SheathSword.2": ExtResource("11_arntx"),
&"Walk": ExtResource("8_ksbbd")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nn08x"]
_data = {
&"DrawSword": ExtResource("13_o3h8g"),
&"Idle": ExtResource("2_qu4a1"),
&"Jump": ExtResource("3_70d11"),
&"Walking": ExtResource("4_cw2d6")
}

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_lslt6"]
resource_name = "blend"
filter_enabled = true
filters = ["%GeneralSkeleton:Chest", "%GeneralSkeleton:Head", "%GeneralSkeleton:LeftHand", "%GeneralSkeleton:LeftIndexDistal", "%GeneralSkeleton:LeftIndexIntermediate", "%GeneralSkeleton:LeftIndexProximal", "%GeneralSkeleton:LeftLittleDistal", "%GeneralSkeleton:LeftLittleIntermediate", "%GeneralSkeleton:LeftLittleProximal", "%GeneralSkeleton:LeftLowerArm", "%GeneralSkeleton:LeftMiddleDistal", "%GeneralSkeleton:LeftMiddleIntermediate", "%GeneralSkeleton:LeftMiddleProximal", "%GeneralSkeleton:LeftRingDistal", "%GeneralSkeleton:LeftRingIntermediate", "%GeneralSkeleton:LeftRingProximal", "%GeneralSkeleton:LeftShoulder", "%GeneralSkeleton:LeftThumbDistal", "%GeneralSkeleton:LeftThumbMetacarpal", "%GeneralSkeleton:LeftThumbProximal", "%GeneralSkeleton:LeftUpperArm", "%GeneralSkeleton:Neck", "%GeneralSkeleton:RightHand", "%GeneralSkeleton:RightIndexDistal", "%GeneralSkeleton:RightIndexIntermediate", "%GeneralSkeleton:RightIndexProximal", "%GeneralSkeleton:RightLittleDistal", "%GeneralSkeleton:RightLittleIntermediate", "%GeneralSkeleton:RightLittleProximal", "%GeneralSkeleton:RightLowerArm", "%GeneralSkeleton:RightMiddleDistal", "%GeneralSkeleton:RightMiddleIntermediate", "%GeneralSkeleton:RightMiddleProximal", "%GeneralSkeleton:RightRingDistal", "%GeneralSkeleton:RightRingIntermediate", "%GeneralSkeleton:RightRingProximal", "%GeneralSkeleton:RightShoulder", "%GeneralSkeleton:RightThumbDistal", "%GeneralSkeleton:RightThumbMetacarpal", "%GeneralSkeleton:RightThumbProximal", "%GeneralSkeleton:RightUpperArm", "%GeneralSkeleton:Spine", "%GeneralSkeleton:UpperChest"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lslt6"]
resource_name = "Unarmed_Idle"
animation = &"Unarmed/Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ulo2v"]
resource_name = "Unarmed_Walking"
animation = &"Unarmed/Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5v66d"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m0x7a"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1iu4k"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ulo2v"]
resource_name = "lower_body_sm"
states/End/position = Vector2(1291, 140)
states/Start/position = Vector2(188, 140)
states/Unarmed_Idle/node = SubResource("AnimationNodeAnimation_lslt6")
states/Unarmed_Idle/position = Vector2(431, 140)
states/Unarmed_Walking/node = SubResource("AnimationNodeAnimation_ulo2v")
states/Unarmed_Walking/position = Vector2(745, 140)
transitions = ["Unarmed_Walking", "Unarmed_Idle", SubResource("AnimationNodeStateMachineTransition_5v66d"), "Unarmed_Idle", "Unarmed_Walking", SubResource("AnimationNodeStateMachineTransition_m0x7a"), "Start", "Unarmed_Idle", SubResource("AnimationNodeStateMachineTransition_1iu4k")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_arntx"]
animation = &"SwordAndShield/DrawSword"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1iu4k"]
resource_name = "SwordAndShield_Idle"
animation = &"SwordAndShield/Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m0x7a"]
resource_name = "SwordAndShield_SheathSword_1"
animation = &"SwordAndShield/SheathSword.1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5v66d"]
resource_name = "SwordAndShield_SheathSword_2"
animation = &"SwordAndShield/SheathSword.2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x63xi"]
resource_name = "Unarmed_DrawSword"
animation = &"Unarmed/DrawSword"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i2e8t"]
resource_name = "Unarmed_Idle"
animation = &"Unarmed/Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qidb7"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_70hv0"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u7x0b"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_utwlt"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kih0c"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lslt6"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ulo2v"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1iu4k"]
resource_name = "upper_body_sm"
states/End/position = Vector2(1416, 399)
states/SwordAndShield_DrawSword/node = SubResource("AnimationNodeAnimation_arntx")
states/SwordAndShield_DrawSword/position = Vector2(913, 100)
states/SwordAndShield_Idle/node = SubResource("AnimationNodeAnimation_1iu4k")
states/SwordAndShield_Idle/position = Vector2(1238, 100)
states/SwordAndShield_SheathSword_1/node = SubResource("AnimationNodeAnimation_m0x7a")
states/SwordAndShield_SheathSword_1/position = Vector2(1238, 285)
states/SwordAndShield_SheathSword_2/node = SubResource("AnimationNodeAnimation_5v66d")
states/SwordAndShield_SheathSword_2/position = Vector2(371, 276)
states/Unarmed_DrawSword/node = SubResource("AnimationNodeAnimation_x63xi")
states/Unarmed_DrawSword/position = Vector2(618, 100)
states/Unarmed_Idle/node = SubResource("AnimationNodeAnimation_i2e8t")
states/Unarmed_Idle/position = Vector2(371, 100)
transitions = ["Start", "Unarmed_Idle", SubResource("AnimationNodeStateMachineTransition_qidb7"), "Unarmed_Idle", "Unarmed_DrawSword", SubResource("AnimationNodeStateMachineTransition_70hv0"), "SwordAndShield_Idle", "SwordAndShield_SheathSword_1", SubResource("AnimationNodeStateMachineTransition_u7x0b"), "SwordAndShield_SheathSword_1", "SwordAndShield_SheathSword_2", SubResource("AnimationNodeStateMachineTransition_utwlt"), "SwordAndShield_SheathSword_2", "Unarmed_Idle", SubResource("AnimationNodeStateMachineTransition_kih0c"), "Unarmed_DrawSword", "SwordAndShield_DrawSword", SubResource("AnimationNodeStateMachineTransition_lslt6"), "SwordAndShield_DrawSword", "SwordAndShield_Idle", SubResource("AnimationNodeStateMachineTransition_ulo2v")]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_m0x7a"]
graph_offset = Vector2(-138.85828, 2.3945618)
nodes/output/position = Vector2(740, 140)
nodes/lower_body_sm/node = SubResource("AnimationNodeStateMachine_ulo2v")
nodes/lower_body_sm/position = Vector2(180, 100)
nodes/upper_body_sm/node = SubResource("AnimationNodeStateMachine_1iu4k")
nodes/upper_body_sm/position = Vector2(180, 320)
nodes/blend/node = SubResource("AnimationNodeBlend2_lslt6")
nodes/blend/position = Vector2(520, 180)
node_connections = [&"output", 0, &"blend", &"blend", 0, &"lower_body_sm", &"blend", 1, &"upper_body_sm"]

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_script")

[node name="InputMgr" type="Node" parent="."]
script = ExtResource("2_m0x7a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_mdl7e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="AnimationMgr" type="Node" parent="."]
script = ExtResource("3_bhhdu")
animation_tree_path = NodePath("../AnimationTree")

[node name="MovementMgr" type="Node" parent="." node_paths=PackedStringArray("input_mgr")]
script = ExtResource("2_megsn")
input_mgr = NodePath("../InputMgr")

[node name="WeaponMgr" type="Node" parent="."]
script = ExtResource("2_52ee3")
weapon_attachment_path = NodePath("../XBot/Skeleton/GeneralSkeleton/RightHandAttachment")

[node name="WeaponSwitchMgr" type="Node" parent="." node_paths=PackedStringArray("input_mgr")]
script = ExtResource("14_switch")
input_mgr = NodePath("../InputMgr")

[node name="XBot" parent="." instance=ExtResource("1_mdl7e")]

[node name="GeneralSkeleton" parent="XBot/Skeleton" index="0"]
bones/0/position = Vector3(-0.0016810473, 1.0284711, 0.014189115)
bones/0/rotation = Quaternion(0.0314422, -0.032934774, -0.0028625422, 0.9989587)
bones/1/rotation = Quaternion(0.06365262, 0.03184909, -0.024284542, 0.9971681)
bones/2/rotation = Quaternion(0.017806716, 0.011982675, 0.020498615, 0.9995595)
bones/3/rotation = Quaternion(0.008943578, 0.010964074, 0.009239014, 0.9998573)
bones/4/rotation = Quaternion(-0.017770091, 0.08547486, -0.014648372, 0.9960742)
bones/5/rotation = Quaternion(-0.03576128, 0.20507006, -0.051926732, 0.97671443)
bones/7/rotation = Quaternion(0.6325911, -0.42436004, -0.39556837, -0.513101)
bones/8/rotation = Quaternion(-0.006023785, 0.8966755, -0.44226196, 0.018467436)
bones/9/rotation = Quaternion(0.42841947, 0.58420134, -0.39920825, 0.5619593)
bones/10/rotation = Quaternion(0.24331528, -0.67915297, -0.1199104, 0.68203413)
bones/11/rotation = Quaternion(0.13126117, -0.7408872, -0.22269596, 0.6198897)
bones/12/rotation = Quaternion(-0.0832294, -0.14080164, 0.08408808, 0.9829431)
bones/13/rotation = Quaternion(0.17847984, 0.050124537, 0.1362589, 0.97317326)
bones/14/scale = Vector3(1.0005782, 1.0004865, 1.0001515)
bones/15/rotation = Quaternion(0.5073848, 0.01444527, 0.021571707, 0.8613284)
bones/16/rotation = Quaternion(0.55056787, -0.021174468, -0.031968605, 0.83390933)
bones/17/rotation = Quaternion(0.49576056, -0.012686175, 0.011556742, 0.8682897)
bones/19/rotation = Quaternion(0.56085265, 0.00954868, -0.0051889, 0.8278444)
bones/20/rotation = Quaternion(0.6717415, -0.028281376, -0.032104164, 0.73954916)
bones/21/rotation = Quaternion(0.28147247, -0.0044167484, 0.013432978, 0.95946515)
bones/23/rotation = Quaternion(0.6365987, 0.019772192, 0.03598156, 0.77010155)
bones/24/rotation = Quaternion(0.59652495, -0.00084514904, -0.011777816, 0.8025077)
bones/25/rotation = Quaternion(0.33498144, 0.004041716, 0.009664058, 0.94216657)
bones/27/rotation = Quaternion(0.6864339, 0.024451092, -0.024312194, 0.7263744)
bones/28/rotation = Quaternion(0.4572153, -3.501772e-07, -0.0005376934, 0.88935584)
bones/29/rotation = Quaternion(0.22321427, 9.69423e-06, -0.0002543238, 0.97476935)
bones/31/rotation = Quaternion(0.48395038, 0.52801967, 0.5579424, -0.4191511)
bones/32/rotation = Quaternion(0.13122459, 0.9169926, -0.37641996, -0.014587656)
bones/33/rotation = Quaternion(0.62001675, -0.60986286, 0.36959237, 0.3271821)
bones/34/rotation = Quaternion(0.04113472, 0.70673984, -0.00863774, 0.7062238)
bones/35/rotation = Quaternion(-0.11995767, 0.66890085, 0.30772567, 0.66594803)
bones/36/rotation = Quaternion(0.098551005, 0.170051, 0.008988741, 0.9804538)
bones/37/rotation = Quaternion(-0.08163022, 0.4226332, 0.30162734, 0.8507283)
bones/38/scale = Vector3(1.0005782, 1.0004864, 1.0001515)
bones/39/rotation = Quaternion(0.64889646, 0.02025659, 0.072261326, 0.7571668)
bones/40/rotation = Quaternion(0.54784364, 0.02101956, 0.03202307, 0.8357034)
bones/41/rotation = Quaternion(0.5694188, 0.009903018, -0.014152516, 0.82186615)
bones/43/rotation = Quaternion(0.6859465, -0.049280938, 0.017485227, 0.7257708)
bones/44/rotation = Quaternion(0.6139546, 0.02580599, 0.034076326, 0.7881831)
bones/45/rotation = Quaternion(0.5516423, 0.008419353, -0.011247395, 0.8339624)
bones/47/rotation = Quaternion(0.7064402, -0.051766336, 0.0039479993, 0.70586604)
bones/48/rotation = Quaternion(0.50956124, -0.005249184, 0.010148726, 0.86035854)
bones/49/rotation = Quaternion(0.5893877, -0.006847438, -0.007822449, 0.8077835)
bones/51/rotation = Quaternion(0.67786026, -0.105396874, 0.00023823377, 0.72759676)
bones/52/rotation = Quaternion(0.59756577, 4.742002e-05, 0.0006991691, 0.8018196)
bones/53/rotation = Quaternion(0.40939853, 2.8882097e-05, 0.0004923492, 0.9123556)
bones/55/rotation = Quaternion(-0.08080272, 0.07554154, 0.9920027, 0.060788263)
bones/56/rotation = Quaternion(0.023727402, 0.99864274, -0.043951314, 0.0147659425)
bones/57/rotation = Quaternion(0.056901656, 0.7077393, -0.7013653, -0.062880374)
bones/58/rotation = Quaternion(4.1249834e-05, 0.99999255, -0.0023810598, -0.0030630152)
bones/60/rotation = Quaternion(0.114952385, 0.07052057, 0.9881224, -0.07366759)
bones/61/rotation = Quaternion(-0.022294965, 0.996698, -0.065707676, 0.042173862)
bones/62/rotation = Quaternion(-0.056417525, 0.69682497, -0.71225506, 0.062806726)
bones/63/rotation = Quaternion(-2.636854e-05, 0.9999899, -0.002251685, 0.0039076097)

[node name="RightHandAttachment" type="BoneAttachment3D" parent="XBot/Skeleton/GeneralSkeleton" index="2"]
transform = Transform3D(0.47134346, -0.01937145, 0.8817369, 0.8806707, -0.043484986, -0.4717291, 0.047480404, 0.9988663, -0.0034365803, -0.39378375, 1.0862302, 0.15185072)
bone_name = "RightHand"
bone_idx = 10

[node name="AnimationPlayer" parent="XBot" index="1"]
libraries = {
&"": SubResource("AnimationLibrary_qu4a1"),
&"SwordAndShield": SubResource("AnimationLibrary_5ixxa"),
&"Unarmed": SubResource("AnimationLibrary_nn08x")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../XBot")
tree_root = SubResource("AnimationNodeBlendTree_m0x7a")
anim_player = NodePath("../XBot/AnimationPlayer")
parameters/blend/blend_amount = 1.0

[editable path="XBot"]
